# Neural-Network-CPP

./: CMakeLists.txt  main.cu
enums/: ActivationFunction.h  ErrorFunction.h
math/: Matrix.cu  Matrix.h  Vector.cpp  Vector.cu  Vector.h
network/: Layer.cpp  Layer.cu  Layer.h  Network.cpp  Network.cu  Network.h
utils/: NeuralNetworkUtils.cpp  NeuralNetworkUtils.cu  NeuralNetworkUtils.h
